private-nlb-clusters/cluster2/demo_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cluster2-webserver
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: cluster2-webserver
