private-nlb-clusters/cluster2/demo_app/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cluster2-webserver
spec:
  hosts:
    - api.cluster2-webserver.svc.cluster.local
  http:
    - route:
        - destination:
            host: api.cluster2-webserver.svc.cluster.local
            subset: v1
